--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -8,7 +8,9 @@
 @theme inline {
   --color-background: var(--background);
   --color-foreground: var(--foreground);
-  --color-custom-dark: #1A1110;
+  --color-custom-dark: #1a1110;
+  --color-custom-main: #e5e5e5;
+  --color-custom-title: #f5f5f5;
 }
 
 @media (prefers-color-scheme: dark) {
